对高频访问接口做redis缓存